# git-bluff

./: AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: args.rs  commit.rs  config.rs  git_repo.rs  main.rs  report.rs
