[package]
name = "git-bluff"
version = "0.1.0"
edition = "2021"
description = "Generate daily reports from git commits"
authors = ["Developer"]

[dependencies]
git2 = { version = "0.18", features = ["vendored-libgit2"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9"
serde_yaml = "0.9"
ignore = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
